--- a/client/package.json
+++ b/client/package.json
@@ -24,9 +24,9 @@
   },
   "homepage": "https://github.com/dimaskiddo/simple-nodejs-grpc#readme",
   "dependencies": {
+    "@grpc/grpc-js": "^1.3.0",
     "@grpc/proto-loader": "^0.5.3",
     "express": "^4.17.1",
-    "grpc": "^1.24.2",
     "helmet": "^3.21.2"
   }
 }
