--- a/server/package.json
+++ b/server/package.json
@@ -24,8 +24,8 @@
   },
   "homepage": "https://github.com/dimaskiddo/simple-nodejs-grpc#readme",
   "dependencies": {
+    "@grpc/grpc-js": "^1.3.0",
     "@grpc/proto-loader": "^0.5.3",
-    "grpc": "^1.24.2",
     "uuid": "^3.4.0"
   }
 }
